# requests-example

./: README.md  pyproject.toml  requests.ipynb
