[tool.poetry]
name = "requests-example"
version = "0.1.0"
description = ""
authors = ["Matt Gosden <mdgosden@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
jupyter = "^1.0.0"
nb-black = "^1.0.7"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
black = "^20.8b1"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
